--- a/abstract.tex
+++ b/abstract.tex
@@ -37,8 +37,7 @@
 
 \section{Introductory para (200 words approx)}
 
-Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 62\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 72\% increase in male to female alcohol-related cases, is absent from male to male, female to male, and female to female domestic abuse cases. We find similar patterns in other violent crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours after the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. \NS{Whatever the football does, it only does it to men, only when they are drunk.}
-
+Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by an increase in male to female alcohol-related cases, and is absent from male to male, female to male, and female to female domestic abuse cases. We find similar patterns in other violent crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. 
 
 \section{Long intro}
 
@@ -306,13 +305,13 @@ While only 23\% of all domestic abuse cases are alcohol-related in our dataset, 
 
 Our findings show both similarities and differences with results from previous quantitative investigations. Similarly to a previous study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. However, in the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses, whereas our findings suggest that it is a victory that results in the largest increase, and that alcohol plays an instrumental role in the relationship between football and domestic abuse. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect on sports-induced emotional cues on domestic abuse are sensitive to the cultural context. 
 
-Based on the pre-match betting odds, all England victories were expected in our dataset, suggesting that in the context of England's participation in national football tournaments, it is living up to the hopes of the fans that has the largest emotional effect, and perhaps results in increased alcohol consumption\autocite{Davies2018}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, which has been suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}.
+Based on the pre-match betting odds, all England victories were expected in our dataset, suggesting that in the context of England's participation in national football tournaments, it is living up to the hopes of the fans that has the largest emotional effect, and perhaps results in increased alcohol consumption\autocite{Davies2018}. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}.
 
 %In the context of the World Cup, previous research has reported elevated testosterone levels amongst the winning team's supporters\autocite{Bernhardt1998}.
 
 The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a markedly different pattern, in that it is when England wins we find a substantial increase in alcohol-related domestic abuse, whereas we found no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws (probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw). A stark difference between our results is the lack of an England loss effect in our sample. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling given that these are \textit{national} football tournament matches.
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the knockout stage. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix).
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix).
 
 
 Does this effect generalise to other sporting events, or is it specific to football?
@@ -320,25 +319,23 @@ It has been suggested previously that popular sports, such as rugby have similar
 
 We also investigated whether similar patterns are also present in other types of crimes, which are similar to domestic abuse in nature. Specifically, we explored how England's participation in national football tournaments affects alcohol and non-alcohol related reported sexual offences and other types of abuse (child abuse, vulnerable adult abuse). The results show no effect on the number of reported sexual offences, and a slight increase in the number of reported other cases when the tournament is on (see Table \ref{otherabuse} in the Appendix). 
 
-Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England win days. First, using a series of logistic regressions, we investigate whether these cases are more likely to happen outside (in a residential dwelling), to be newly reported (meaning that there was no earlier reported case with the same victim and offender), and result in an injury. Surprisingly, the results show that domestic abuse cases are more likely to happen outside on England lost days and not on England win days, and cases happening on England win days are only slightly more likely to be newly reported. Cases that result in some kind of injury are more likely to happen on England win days, and perhaps surprisingly, non-alcohol related cases (but not alcohol-related ones) are more likely to be serious on England loss days. \AT{These results are very weird}
+Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (in the sense that there was no earlier reported case with the same victim and offender in our dataset), happen inside (in a residential dwelling) as opposed to a public location, or result in an injury. We find no evidence that cases reported on England match days are more likely to be newly reported cases (see Table \ref{Characteristics1} in the Appendix). It could be argued that on England match days, cases of domestic abuse are more likely to happen outside and subsequently get reported compared to non-match days, due to the huge number of fans congregating in pubs. Interestingly, reported cases are more likely to happen in public on England lost days but not on England win days, and this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England lost days are also more likely to result in injury, a pattern that is absent in alcohol-related cases.
 
-Next we turn to non-newly reported cases, with the same victim-offender pair. We are interested in whether the number of days elapsed between reported cases are affected by England football matches. To investigate this, we run two negative binomial regressions, where the outcome variable is the number of days elapsed since the last reported case and the number of days until the next case. For example, it is possible that England matches bring cases forward. Non-alcohol, but not alcohol-related cases happening on England win days are sooner followed by a next case compared to cases occurring on non-match days. Conversely, non-alcohol, but not alcohol-related cases occur sooner on England lost days. Finally, 
+Next we turn to repeated cases (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. To investigate this question, we run two negative binomial regressions, where the outcome variable is the number of days elapsed since the last reported case and the number of days until the next case. 
 
+The results show that non-alcohol related cases perpetrated on England loss days are slightly more likely to occur sooner after the previous incident, compared to repeat cases happening on non-match days, but only for non-alcohol related incidents (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England match days or after and England match, and alcohol-related cases on an England draw day are more likely to be reported sooner.
 
+Finally, we are interested in whether an England match day transforms previously non-alcohol related incidents into alcohol-related ones. To explore this question, we ran a logistic regression on the subset of repeated cases, controlling for the type of the previous case (alcohol/non-alcohol related). We find that an England win day increases the likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix).
 
+\AT{These results are weird...}
 
-%But what kind of abuse? useful framework is the typology by Johnson (2008). Can we differentiate SCV and intimate terrorism by the time of reporting? We'd expect loads of CSV in our dataset and not much intimate terrorism (Johnson argues we should use ex partners dataset to investigate this due to the reporting bias in different types of domestic abuse). Intimate terrorism is characterised by harassment and stalking after separation. The big difference between SCV and IT is control. 
+These results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse cases perpetrated on England win days are not characteristically different from domestic abuse cases perpetrated on other days during the year. However, the high level of underreporting of domestic abuse cases warrant a cautious interpretation of these findings. 
 
-
-%\href{https://tavistockrelationships.ac.uk/policy-research/policy-briefings/914-couples-with-situational-violence}{Very useful classification}.
+ Nevertheless, taken together, our results suggest that the increase is unlikely to be a result of changes in the victim's willingness to report cases (e.g., due to awareness campaigns). Other suggested explanations for the observed increase in the number of reported cases of domestic abuse on England match days include other high-profile events taking place around the time of the match and increased policing on the day \autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase. In addition, it is unclear why the effect of different policing practices would depend on the result of the match. 
 
 
 \subsection{Limitations}
 
-It is very likely that other factors also affect the strength of the effect
-
-underreporting, other factors like weather, campaigns may have increased willingness to report? but then why would it not be the same regardless of the result. issues about defining initimate partner violence, maybe increase because people celebrate outside? no.
-If he had enough data, we could test for the same thing Card \& Lee have done.
 
 
 \newpage
@@ -362,8 +359,8 @@ If he had enough data, we could test for the same thing Card \& Lee have done.
  & to Male & to Female & to Female & to Male \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4)\\ 
 \hline \\[-1.8ex] 
- Alcohol & $-$0.900$^{***}$ & $-$0.891$^{***}$ & $-$0.864$^{***}$ & $-$0.921$^{***}$ \\ 
-  & (0.048) & (0.033) & (0.080) & (0.066) \\ 
+% Alcohol & $-$0.900$^{***}$ & $-$0.891$^{***}$ & $-$0.864$^{***}$ & $-$0.921$^{***}$ \\ 
+%  & (0.048) & (0.033) & (0.080) & (0.066) \\ 
   Tournament on & 0.037 & 0.050$^{**}$ & 0.041 & 0.051 \\ 
   & (0.026) & (0.021) & (0.038) & (0.036) \\ 
   England win & 0.013 & 0.019 & $-$0.031 & 0.174 \\ 
@@ -471,8 +468,8 @@ AIC & 714.980 & 704.356 \\
   & (0.232) & (0.117) & (0.106) & (0.140) & (0.212) & (0.124) & (0.154) & (0.088) \\ 
   After England & 0.253$^{**}$ & 0.122$^{*}$ & 0.024 & 0.070 & $-$0.008 & 0.007 & 0.038 & 0.140$^{**}$ \\ 
   & (0.101) & (0.070) & (0.065) & (0.082) & (0.125) & (0.103) & (0.081) & (0.060) \\ 
-  AlcoholYes &  &  &  & $-$0.853$^{***}$ & $-$0.803$^{***}$ & $-$0.704$^{***}$ & $-$0.725$^{***}$ & $-$0.743$^{***}$ \\ 
-  &  &  &  & (0.083) & (0.097) & (0.067) & (0.059) & (0.062) \\ 
+%  AlcoholYes &  &  &  & $-$0.853$^{***}$ & $-$0.803$^{***}$ & $-$0.704$^{***}$ & $-$0.725$^{***}$ & $-$0.743$^{***}$ \\ 
+%  &  &  &  & (0.083) & (0.097) & (0.067) & (0.059) & (0.062) \\ 
   Tournament on:AlcoholYes &  &  &  & $-$0.093 & 0.076 & 0.063 & $-$0.163$^{**}$ & $-$0.068 \\ 
   &  &  &  & (0.101) & (0.162) & (0.076) & (0.072) & (0.078) \\ 
   England win:AlcoholYes &  &  &  & 2.558$^{***}$ & 0.756$^{*}$ &  & 0.348 & 0.460$^{***}$ \\ 
@@ -518,7 +515,7 @@ Observations & 30 & 32 & 30 & 730 & 732 & 730 & 732 & 618 \\
   &  excluded & excluded & excluded & excluded & excluded \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5)\\ 
 \hline \\[-1.8ex] 
-Alcohol & $-$0.862$^{***}$ & $-$0.862$^{***}$ & $-$0.862$^{***}$ & $-$0.863$^{***}$ & $-$0.867$^{***}$ \\ 
+%Alcohol & $-$0.862$^{***}$ & $-$0.862$^{***}$ & $-$0.862$^{***}$ & $-$0.863$^{***}$ & $-$0.867$^{***}$ \\ 
   & (0.033) & (0.033) & (0.032) & (0.031) & (0.033) \\ 
   Tournament on & 0.018 & 0.015 & 0.027 & 0.030 & $-$0.003 \\ 
   & (0.022) & (0.025) & (0.025) & (0.022) & (0.025) \\ 
@@ -578,8 +575,8 @@ Observations & 5,416 & 5,302 & 5,304 & 5,302 & 5,304 \\
  & Football & Rugby \\ 
 \\[-1.8ex] & (1) & (2)\\ 
 \hline \\[-1.8ex] 
- Alcohol & $-$0.862$^{***}$ & $-$0.862$^{***}$ \\ 
-  & (0.031) & (0.031) \\ 
+% Alcohol & $-$0.862$^{***}$ & $-$0.862$^{***}$ \\ 
+%  & (0.031) & (0.031) \\ 
   Tournament on & 0.032 & 0.005 \\ 
   & (0.020) & (0.019) \\ 
   England win & $-$0.031 & 0.0001 \\ 
@@ -681,8 +678,8 @@ Observations & 6,034 & 6,034 \\
 
 \begin{table}
 \centering
- \caption{Characteristics of domestic abuse cases reported on match days}
-  \label{Characteristics}
+ \caption{Characteristics of domestic abuse cases reported on match days I}
+  \label{Characteristics1}
   \scalebox{0.9}{
   \begin{threeparttable}
 \begin{tabular}{@{\extracolsep{5pt}}lccc} 
@@ -690,43 +687,42 @@ Observations & 6,034 & 6,034 \\
 \hline \\[-1.8ex] 
  & \multicolumn{3}{c}{\textit{Dependent variable:}} \\ 
 \cline{2-4} 
-\\[-1.8ex] & Public & Newly & Results \\ 
-& Location & Reported & in Injury \\ 
+\\[-1.8ex] & Newly & Public & Results \\ 
+& Reported & Location & in Injury \\ 
+& Yes=1, & Yes=1, & Yes=1, \\ 
+& No=0 & No=0 & No=0 \\ 
 \\[-1.8ex] & (1) & (2) & (3)\\ 
 \hline \\[-1.8ex] 
-Alcohol & 0.881$^{**}$ & 0.799$^{***}$ & 1.480$^{***}$ \\ 
-  & (0.054) & (0.039) & (0.039) \\ 
-  Tournament\_on & 1.022 & 0.964 & 1.007 \\ 
-  & (0.037) & (0.029) & (0.033) \\ 
-  England\_win & 1.182 & 1.011 & 1.166 \\ 
-  & (0.109) & (0.089) & (0.101) \\ 
-  England\_draw & 1.014 & 1.085 & 1.126 \\ 
-  & (0.138) & (0.120) & (0.117) \\ 
-  England\_lost & 1.400$^{***}$ & 0.906 & 1.303$^{***}$ \\ 
-  & (0.100) & (0.085) & (0.093) \\ 
-  After\_England & 1.072 & 1.036 & 1.050 \\ 
-  & (0.068) & (0.055) & (0.062) \\ 
-  Alcohol:Tournament\_on & 1.065 & 1.091 & 0.944 \\ 
-  & (0.080) & (0.059) & (0.065) \\ 
-  Alcohol:England\_win & 1.110 & 1.097 & 0.938 \\ 
-  & (0.195) & (0.156) & (0.166) \\ 
-  Alcohol:England\_draw & 0.984 & 0.860 & 0.812 \\ 
-  & (0.305) & (0.231) & (0.236) \\ 
-  Alcohol:England\_lost & 1.045 & 1.247 & 0.661$^{**}$ \\ 
-  & (0.199) & (0.168) & (0.180) \\ 
-  Alcohol:After\_England & 1.043 & 0.965 & 0.885 \\ 
-  & (0.143) & (0.108) & (0.118) \\ 
+% Alcohol=Yes & $-$0.030 & 0.001 & 0.427$^{***}$ \\ 
+%  & (0.059) & (0.081) & (0.058) \\ 
+  Tournament on & $-$0.037 & 0.021 & 0.007 \\ 
+  & (0.030) & (0.037) & (0.033) \\ 
+  England win & 0.011 & 0.167 & 0.153 \\ 
+  & (0.089) & (0.110) & (0.101) \\ 
+  England draw & 0.082 & 0.014 & 0.119 \\ 
+  & (0.121) & (0.138) & (0.117) \\ 
+  England lost & $-$0.099 & 0.337$^{***}$ & 0.265$^{***}$ \\ 
+  & (0.086) & (0.099) & (0.093) \\ 
+  After England & 0.035 & 0.070 & 0.049 \\ 
+  & (0.056) & (0.068) & (0.062) \\ 
+  Alcohol:Tournament on & 0.087 & 0.063 & $-$0.058 \\ 
+  & (0.060) & (0.080) & (0.066) \\ 
+  Alcohol:England win & 0.093 & 0.104 & $-$0.064 \\ 
+  & (0.156) & (0.196) & (0.165) \\ 
+  Alcohol:England draw & $-$0.151 & $-$0.016 & $-$0.209 \\ 
+  & (0.233) & (0.306) & (0.237) \\ 
+  Alcohol:England lost & 0.221 & 0.044 & $-$0.413$^{**}$ \\ 
+  & (0.171) & (0.198) & (0.182) \\ 
+  Alcohol:After England & $-$0.036 & 0.042 & $-$0.122 \\ 
+  & (0.108) & (0.143) & (0.118) \\ 
  \hline \\[-1.8ex] 
-Observations & 279,777 & 251,976 & 279,777 \\ 
-Log Likelihood & $-$106,538.000 & $-$164,012.700 & $-$136,439.700 \\ 
-Akaike Inf. Crit. & 213,207.900 & 328,153.300 & 273,011.500 \\ 
-%\hline 
+Observations & 251,976 & 279,777 & 279,777 \\ 
 \hline \\[-1.8ex] 
 %\textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-      \item[b] \textit{Estimates are from a series of logistic regressions with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol, where every observation is a reported domestic abuse case; standard errors in parentheses}
+      \item[b] \textit{Estimates are log odds from a series of logistic regressions with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol, where every observation is a reported domestic abuse case; cases that happened in 2010 were excluded from the first regression; standard errors clustered by victim-offender pairs are in parentheses}
     \end{tablenotes}
 \end{threeparttable} } 
 \end{table}
@@ -734,7 +730,8 @@ Akaike Inf. Crit. & 213,207.900 & 328,153.300 & 273,011.500 \\
 
 \begin{table}
 \centering
- \caption{}
+  \caption{Characteristics of domestic abuse cases reported on match days II}
+    \label{Characteristics2}
  \scalebox{0.9}{
   \begin{threeparttable}
 \begin{tabular}{@{\extracolsep{5pt}}lccc} 
@@ -743,46 +740,104 @@ Akaike Inf. Crit. & 213,207.900 & 328,153.300 & 273,011.500 \\
  & \multicolumn{3}{c}{\textit{Dependent variable:}} \\ 
 \cline{2-4} 
 \\[-1.8ex] & Days & Days & Hours \\ 
- & until next & since last & until reported \\
+ & since last & until next & until reported \\
 \\[-1.8ex] & (1) & (2) & (3)\\ 
 \hline \\[-1.8ex] 
- Alcohol & $-$0.050 & 0.097$^{**}$ & $-$0.601$^{***}$ \\ 
-  & (0.036) & (0.049) & (0.056) \\ 
-  Tournament\_on & $-$0.046 & $-$0.014 & 0.084$^{**}$ \\ 
-  & (0.029) & (0.029) & (0.042) \\ 
-  England\_win & $-$0.288$^{***}$ & 0.016 & $-$0.093 \\ 
-  & (0.105) & (0.091) & (0.132) \\ 
-  England\_draw & $-$0.105 & $-$0.017 & 0.035 \\ 
-  & (0.107) & (0.115) & (0.154) \\ 
-  England\_lost & $-$0.099 & $-$0.150$^{*}$ & $-$0.429$^{***}$ \\ 
-  & (0.094) & (0.085) & (0.125) \\ 
-  After\_England & $-$0.130$^{**}$ & 0.054 & $-$0.215$^{***}$ \\ 
-  & (0.059) & (0.056) & (0.079) \\ 
-  Alcohol:Tournament\_on & 0.026 & 0.027 & 0.222$^{**}$ \\ 
-  & (0.058) & (0.059) & (0.089) \\ 
-  Alcohol:England\_win & 0.430$^{*}$ & $-$0.112 & 0.164 \\ 
-  & (0.188) & (0.161) & (0.234) \\ 
-  Alcohol:England\_draw & $-$0.109 & $-$0.234 & $-$0.607$^{*}$ \\ 
-  & (0.204) & (0.216) & (0.325) \\ 
-  Alcohol:England\_lost & 0.121 & 0.319$^{*}$ & 0.736$^{***}$ \\ 
-  & (0.175) & (0.168) & (0.246) \\ 
-  Alcohol:After\_England & 0.159 & $-$0.099 & $-$0.233 \\ 
-  & (0.117) & (0.109) & (0.162) \\ 
+% Alcohol & 0.103$^{*}$ & 0.057 & $-$0.839$^{***}$ \\ 
+%  & (0.054) & (0.050) & (0.189) \\ 
+  Tournament on & $-$0.014 & $-$0.047$^{*}$ & 0.080 \\ 
+  & (0.028) & (0.028) & (0.063) \\ 
+  England win & 0.016 & $-$0.340$^{***}$ & $-$0.098 \\ 
+  & (0.082) & (0.095) & (0.162) \\ 
+  England draw & $-$0.017 & $-$0.111 & 0.034 \\ 
+  & (0.096) & (0.105) & (0.208) \\ 
+  England lost & $-$0.163$^{*}$ & $-$0.104 & $-$0.560$^{***}$ \\ 
+  & (0.087) & (0.087) & (0.170) \\ 
+  After England & 0.052 & $-$0.139$^{**}$ & $-$0.243$^{**}$ \\ 
+  & (0.054) & (0.055) & (0.108) \\ 
+  Alcohol:Tournament on & 0.026 & 0.025 & 0.200 \\ 
+  & (0.057) & (0.056) & (0.197) \\ 
+  Alcohol:England win & $-$0.119 & 0.358$^{**}$ & 0.152 \\ 
+  & (0.146) & (0.159) & (0.450) \\ 
+  Alcohol:England draw & $-$0.266 & $-$0.116 & $-$0.935$^{**}$ \\ 
+  & (0.231) & (0.208) & (0.390) \\ 
+  Alcohol:England lost & 0.277$^{*}$ & 0.114 & 0.552 \\ 
+  & (0.159) & (0.166) & (0.654) \\ 
+  Alcohol:After England & $-$0.104 & 0.147 & $-$0.265 \\ 
+  & (0.106) & (0.102) & (0.297) \\ 
  \hline \\[-1.8ex] 
 Observations & 95,091 & 95,091 & 272,793 \\ 
-%Log Likelihood & $-$597,333.800 & $-$599,431.300 & $-$631,831.300 \\ 
-%$\theta$ & 0.606$^{***}$  (0.002) & 0.586$^{***}$  (0.002) & 0.096$^{***}$  (0.0003) \\ 
-%Akaike Inf. Crit. & 1,194,800.000 & 1,198,995.000 & 1,263,795.000 \\ 
 %\hline 
 \hline \\[-1.8ex] 
 %\textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular}
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
-      \item[b] \textit{Estimates are from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol; standard errors in parentheses}
+      \item[b] \textit{Estimates are from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol, where every observation is a reported domestic abuse case; for each regression, we excluded the upper 2.5\% of the outcome variable; standard errors clustered by victim-offender pairs are in parentheses}
     \end{tablenotes}
 \end{threeparttable} } 
 \end{table}
+
+\newpage
+
+
+\begin{table}
+\centering
+  \caption{Alcohol transition on England match days}
+    \label{alctrans}
+ \scalebox{0.9}{
+  \begin{threeparttable}
+\begin{tabular}{@{\extracolsep{5pt}}lc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-2} 
+\\[-1.8ex] & Alcohol \\ 
+& Yes=1, \\ 
+& No=0 \\ 
+\hline \\[-1.8ex] 
+ Tournament on & $-$0.134$^{**}$ \\ 
+  & (0.062) \\ 
+  England win & 0.443$^{***}$ \\ 
+  & (0.157) \\ 
+  England draw & 0.368$^{*}$ \\ 
+  & (0.201) \\ 
+  England lost & $-$0.113 \\ 
+  & (0.180) \\ 
+  After England & 0.041 \\ 
+  & (0.114) \\ 
+%  Previous\_alc=Yes & 1.670$^{***}$ \\ 
+%  & (0.120) \\ 
+  Tournament on:Previous alcohol & $-$0.051 \\ 
+  & (0.100) \\ 
+  England win:Previous alcohol & $-$0.110 \\ 
+  & (0.277) \\ 
+  England draw:Previous alcohol & $-$0.365 \\ 
+  & (0.372) \\ 
+  England lost:Previous alcohol & 0.179 \\ 
+  & (0.292) \\ 
+  After England:Previous alcohol & 0.066 \\ 
+  & (0.180) \\ 
+ \hline \\[-1.8ex] 
+Observations & 97,292 \\ 
+%R$^{2}$ & 0.208 \\ 
+%$\chi^{2}$ & 14,868.240$^{***}$ (df = 65) \\ 
+%\hline 
+\hline \\[-1.8ex] 
+%\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\begin{tablenotes}
+      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
+      \item[b] \textit{Estimates are log odds from a logistic regression with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol involvement of the previous case, where every observation is a reported domestic abuse case; standard errors clustered by victim-offender pairs are in parentheses}
+    \end{tablenotes}
+\end{threeparttable} } 
+\end{table}
+
+
+
+
+
+
 
 
 \clearpage
